fixed navbar overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -105,7 +105,6 @@ input[type="text"] {
 }
 
 nav {
-  width: 100%;
   height: 4.5rem;
   background-color: var(--xiketic);
 
@@ -124,4 +123,8 @@ nav > * {
 #logo {
   width: 3em;
   height: 3em;
+}
+
+#logo:hover {
+  filter: brightness(150%)
 }
